Alignment fixed

--- a/app/assets/stylesheets/index.css
+++ b/app/assets/stylesheets/index.css
@@ -243,8 +243,9 @@ textarea{
 }
 .content-body table tr th{
 	border: none;
-	padding: 1%;
+	padding: 7px;
 	padding-left: 0;
+	width: 175px;
 }
 .content-body table tr td{
 	border: none;
@@ -297,9 +298,8 @@ textarea{
 .content-body table .avg-cost, .content-body table .zip-cost{
 	font-size: 32px;
 	text-align: left;
-	font-family: 'OpenSansSemibold';
 	padding: 17px 0px;
-	width: 175px;
+	
 }
 .content-body table .avg-cost-heading, .content-body table .scroll-arrow{
 	text-align: left;
@@ -694,3 +694,31 @@ textarea{
 		padding-top: 25px !important;
 		cursor: pointer;
 	}
+
+
+
+	
+	
+.table-container {
+    width:370px; /* Total width of visible columns + border widths */
+    overflow:hidden;
+    float: left;
+    margin-top: 8px;
+    padding-left: 20px;
+}
+
+.sliding-window {
+    overflow:hidden;
+    width: 0;
+}
+
+.sliding-window div {
+    float:left;
+    width:151px;
+}
+
+.arrows {
+	float: left;
+	width: 15px;
+	margin-top: 21px;
+}
